[gd_scene load_steps=10 format=3 uid="uid://6tdle4y5o03o"]

[ext_resource type="Script" path="res://addons/dialogic/Modules/Variable/variables_editor/variables_editor.gd" id="2"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/Variable/variables_editor/variable_tree.gd" id="2_1i17i"]

[sub_resource type="Image" id="Image_vjanf"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_ikdle"]
image = SubResource("Image_vjanf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6616"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vn21i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffuxp"]
content_margin_bottom = 0.0
bg_color = Color(0.44, 0.73, 0.98, 0.1)
border_width_bottom = 2
border_color = Color(0.44, 0.73, 0.98, 1)
expand_margin_left = 4.0
expand_margin_top = 2.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
anti_aliasing = false

[sub_resource type="Theme" id="Theme_17j6i"]
Button/styles/hover = SubResource("StyleBoxFlat_o6616")
Button/styles/normal = SubResource("StyleBoxEmpty_vn21i")
Button/styles/pressed = SubResource("StyleBoxFlat_o6616")
pressed/styles/Button = SubResource("StyleBoxFlat_ffuxp")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncgqs"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="VariablesEditor" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Editor" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="Editor"]
layout_mode = 2

[node name="Title" type="Label" parent="Editor/HBox"]
layout_mode = 2
theme_type_variation = &"DialogicSubTitle"
text = "Variables"

[node name="Search" type="LineEdit" parent="Editor/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"
right_icon = SubResource("ImageTexture_ikdle")

[node name="Tree" type="Tree" parent="Editor"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DialogicPanelB"
theme_override_constants/button_margin = 4
theme_override_constants/draw_guides = 1
columns = 3
column_titles_visible = true
script = ExtResource("2_1i17i")

[node name="ChangeTypePopup" type="PanelContainer" parent="Editor/Tree"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 140.0
offset_top = 160.0
offset_right = 272.0
offset_bottom = 190.0
theme = SubResource("Theme_17j6i")
theme_override_styles/panel = SubResource("StyleBoxFlat_ncgqs")

[node name="HBox" type="HBoxContainer" parent="Editor/Tree/ChangeTypePopup"]
layout_mode = 2

[node name="String" type="Button" parent="Editor/Tree/ChangeTypePopup/HBox"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "String (Any text)"
toggle_mode = true
icon = SubResource("ImageTexture_ikdle")
icon_alignment = 1

[node name="Float" type="Button" parent="Editor/Tree/ChangeTypePopup/HBox"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Float (Number with Decimals)"
toggle_mode = true
icon = SubResource("ImageTexture_ikdle")
icon_alignment = 1

[node name="Int" type="Button" parent="Editor/Tree/ChangeTypePopup/HBox"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Int (Integer)"
toggle_mode = true
icon = SubResource("ImageTexture_ikdle")
icon_alignment = 1

[node name="Bool" type="Button" parent="Editor/Tree/ChangeTypePopup/HBox"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Bool (True/False flag)"
toggle_mode = true
icon = SubResource("ImageTexture_ikdle")
icon_alignment = 1

[node name="ReferenceInfo" type="HBoxContainer" parent="Editor"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Editor/ReferenceInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "You've made some changes to existing variables! Use the reference manager to check if something broke."
autowrap_mode = 3

[node name="ReferenceManager" type="Button" parent="Editor/ReferenceInfo"]
layout_mode = 2
text = "Reference Manager"

[node name="Info" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="Info"]
layout_mode = 2

[node name="Title" type="Label" parent="Info/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"DialogicSection"
text = "How to use variables"

[node name="Documentation" type="LinkButton" parent="Info/HBox"]
layout_mode = 2
text = "Read the Docs"
uri = "https://docs.dialogic.pro/variables.html"

[node name="RichTextLabel" type="RichTextLabel" parent="Info"]
layout_mode = 2
text = "Variables are good way to keep track of all kinds of things during your game. Dialogic has an easy-to-use and beginner friendly variable system built in. However Dialogic allows to use outside variables (of Autoload Singletons) just as easily. You can also access the Dialogic variables from outside scripts."
fit_content = true

[connection signal="text_changed" from="Editor/HBox/Search" to="." method="_on_search_text_changed"]
[connection signal="button_clicked" from="Editor/Tree" to="Editor/Tree" method="_on_button_clicked"]
[connection signal="item_edited" from="Editor/Tree" to="Editor/Tree" method="_on_item_edited"]
[connection signal="pressed" from="Editor/ReferenceInfo/ReferenceManager" to="." method="_on_reference_manager_pressed"]
